# rag_agent_mcp

./: .env  main.py  pyproject.toml
prompts/: system_prompt.md  system_prompt.py
src/agent/: config.py  memory.py  runner.py
src/agent/tools/: base.py  config.py  rag_tool.py  registry.py  weather_tool.py
src/clients/: llm_client.py
src/constants/model_names/: models_name.py
src/workers/: worker.py
