[project]
name = "rag-agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "ruff>=0.15.6",
    "together>=2.5.0",
    "transformers>=5.3.0",
]
